fix(gallery-type): fix on open gallery type page on mobiles, it doesn't scroll from top, now everything works across browsers and types of devices

--- a/client/src/pages/gallery-type/gallery-type.component.scss
+++ b/client/src/pages/gallery-type/gallery-type.component.scss
@@ -57,7 +57,7 @@ a:not(:last-of-type) {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100dvh;
+  height: 100svh; // smallest screen height, it is better then dvh (dynamic viewport height) cause it is better on look when it doesn't resize on scroll
   display: flex;
   position: relative;
   overflow: hidden;
